# GTerm

./: CMakeLists.txt  README.md  gui.cpp  gui.hpp  main.cpp
include/: gui.hpp
src/: gui.cpp
